<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Settings">

    <TableRow>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/avatar"
            android:contentDescription="@string/backButtonName"
            tools:ignore="ImageContrastCheck" />
    </TableRow>

    <TableRow
        android:layout_marginStart="20dp"
        android:layout_marginTop="37dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userProfile"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/arrow"
            app:srcCompat="@drawable/arrow"
            tools:ignore="ImageContrastCheck" />
    </TableRow>

    <TableRow
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateAndTime"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/arrow"
            app:srcCompat="@drawable/arrow"
            tools:ignore="ImageContrastCheck" />
    </TableRow>

    <TableRow
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soundSettings"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/arrow"
            app:srcCompat="@drawable/arrow"
            tools:ignore="ImageContrastCheck" />
    </TableRow>

    <TableRow
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkUpdate"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/arrow"
            app:srcCompat="@drawable/arrow"
            tools:ignore="ImageContrastCheck" />
    </TableRow>

    <TableRow
        android:layout_marginStart="36dp"
        android:layout_marginTop="319dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/bottompanel" />
</TableLayout>