<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Alarm">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:text="@string/alarm"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,TextSizeCheck" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="148dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="21dp"
        android:layout_toEndOf="@+id/textView"
        android:background="@drawable/avatar"
        android:contentDescription="@string/backButtonName"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="47dp"
        android:text="@string/time1"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/time2"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="101dp"
        android:layout_toEndOf="@+id/textView7"
        android:background="@drawable/switchbackgroundred"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch1"
        android:layout_marginStart="106dp"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@+id/textView8"
        android:background="@drawable/switchbackgroundgreen"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/button"
        android:text="@string/addAlarm" />
</RelativeLayout>