<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp"
            android:layout_weight="1"
            android:text="@string/input"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextSizeCheck" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/backbutton"
            android:contentDescription="@string/backButtonName"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="248dp"
            android:layout_marginEnd="22dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="22dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="22dp"
            android:layout_weight="1"
            android:width="312dp"
            android:height="48dp"
            android:backgroundTint="@color/button"
            android:text="@string/input"
            app:cornerRadius="10dp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    </LinearLayout>
</LinearLayout>